--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "firebase": "^10.7.1",
+    "framer-motion": "^12.20.1",
     "lucide-react": "^0.523.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
